doc: updated the readme as well as swagger
